#43 Updated for modern JDK; #51 removed paxtools-trove; bumbed to 5.3.0-SNAPSHOT.