@@ -7,7 +7,7 @@
 
   <groupId>org.biopax.paxtools</groupId>
   <artifactId>paxtools</artifactId>
-  <version>5.2.1-SNAPSHOT</version>
+  <version>5.3.0-SNAPSHOT</version>
 
   <name>Paxtools</name>
 
@@ -31,7 +31,6 @@
     <module>sbgn-converter</module>
     <module>paxtools-console</module>
     <module>paxtools-query</module>
-    <module>paxtools-trove</module>
     <module>paxtools-archetype</module>
     <module>json-converter</module>
     <module>paxtools-search</module>
@@ -40,34 +39,13 @@
   </modules>
 
   <properties>
-    <java.version>1.6</java.version>
+    <java.version>17</java.version>
     <github.global.server>github</github.global.server>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <junit.version>4.10</junit.version>
-    <slf4j.version>1.7.25</slf4j.version>
-    <logback.version>1.1.2</logback.version>
-    <commons-lang.version>3.4</commons-lang.version>
-    <collections-generic.version>4.01</collections-generic.version>
     <maven.version.range>[3.0,4)</maven.version.range>
-    <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
-    <maven-war-plugin.version>2.6</maven-war-plugin.version>
-    <maven-resources-plugin>2.7</maven-resources-plugin>
-    <maven-release-plugin.version>2.5.1</maven-release-plugin.version>
-    <wagon-ssh.version>2.8</wagon-ssh.version>
-    <wagon-scm.version>2.8</wagon-scm.version>
-    <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
-    <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
-    <maven-source-plugin.version>2.4</maven-source-plugin.version>
-    <maven-site-plugin.version>3.4</maven-site-plugin.version>
-    <maven-javadoc-plugin.version>2.10.2</maven-javadoc-plugin.version>
-    <maven-jxr-plugin.version>2.5</maven-jxr-plugin.version>
-    <maven-project-info-reports-plugin.version>2.9</maven-project-info-reports-plugin.version>
-    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-    <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
-    <nexus-staging-maven-plugin.version>1.6.5</nexus-staging-maven-plugin.version>
-    <doxia-integration-tools.version>1.6</doxia-integration-tools.version>
-    <maven-enforcer-plugin>1.4</maven-enforcer-plugin>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <developers>
@@ -158,11 +136,11 @@
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
             <artifactId>nexus-staging-maven-plugin</artifactId>
+            <version>1.6.8</version>
             <extensions>true</extensions>
             <configuration>
               <serverId>ossrh</serverId>
               <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-              <!--                             <autoReleaseAfterClose>true</autoReleaseAfterClose> -->
             </configuration>
           </plugin>
           <plugin>
@@ -177,6 +155,7 @@
             </executions>
           </plugin>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
             <executions>
               <execution>
@@ -236,7 +215,7 @@
       <plugins>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>${maven-compiler-plugin.version}</version>
+          <version>3.8.1</version>
           <configuration>
             <source>${java.version}</source>
             <target>${java.version}</target>
@@ -245,12 +224,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>${maven-jar-plugin.version}</version>
+          <version>3.1.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>${maven-source-plugin.version}</version>
+          <version>3.2.1</version>
           <executions>
             <execution>
               <id>attach-sources</id>
@@ -263,7 +242,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>${maven-release-plugin.version}</version>
+          <version>2.5.3</version>
           <configuration>
             <goals>deploy site-deploy</goals>
             <autoVersionSubmodules>true</autoVersionSubmodules>
@@ -274,15 +253,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven-surefire-plugin.version}</version>
-          <configuration>
-            <argLine>-Dfile.encoding=UTF-8 -ea</argLine>
-          </configuration>
+          <version>2.22.2</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>${maven-javadoc-plugin.version}</version>
+          <version>3.0.1</version>
           <configuration>
             <excludePackageNames>org.biopax.validator.*:net.biomodels.*</excludePackageNames>
             <failOnError>false</failOnError>
@@ -291,17 +267,17 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jxr-plugin</artifactId>
-          <version>${maven-jxr-plugin.version}</version>
+          <version>3.0.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>${maven-project-info-reports-plugin.version}</version>
+          <version>3.0.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
-          <version>${maven-site-plugin.version}</version>
+          <version>3.10.0</version>
           <!--<configuration>-->
           <!--<skipDeploy>true</skipDeploy>-->
           <!--</configuration>-->
@@ -309,12 +285,12 @@
         <plugin>
           <groupId>org.sonatype.plugins</groupId>
           <artifactId>nexus-staging-maven-plugin</artifactId>
-          <version>${nexus-staging-maven-plugin.version}</version>
+          <version>1.6.8</version>
         </plugin>
         <plugin>
           <artifactId>maven-gpg-plugin</artifactId>
           <groupId>org.apache.maven.plugins</groupId>
-          <version>${maven-gpg-plugin.version}</version>
+          <version>1.6</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -322,24 +298,24 @@
       <extension>
         <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-ssh</artifactId>
-        <version>${wagon-ssh.version}</version>
+        <version>2.10</version>
       </extension>
       <extension>
         <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-scm</artifactId>
-        <version>${wagon-scm.version}</version>
+        <version>2.8</version>
       </extension>
       <extension>
         <groupId>org.apache.maven.doxia</groupId>
         <artifactId>doxia-integration-tools</artifactId>
-        <version>${doxia-integration-tools.version}</version>
+        <version>1.11.1</version>
       </extension>
     </extensions>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-        <version>${maven-enforcer-plugin}</version>
+        <version>1.4.1</version>
         <executions>
           <execution>
             <id>enforce-banned-dependencies</id>
@@ -356,8 +332,6 @@
                     <exclude>aspectj:aspectj*</exclude> <!-- org.aspectj is the new one -->
                     <exclude>hsqldb:hsqldb</exclude> <!-- org.hsqldb is the new one -->
                     <exclude>org.springframework</exclude>
-                    <exclude>com.sun.xml.bind</exclude>
-                    <exclude>javax.xml.bind</exclude>
                     <exclude>net.sf.saxon</exclude>
                     <exclude>c3p0:c3p0</exclude> <!-- com.mchange:c3p0 is the new one -->
                     <exclude>org.apache.commons:com.springsource.org.apache.commons.logging</exclude>
@@ -393,8 +367,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <testFailureIgnore>false</testFailureIgnore>
-          <!-- enable assertions during the tests -->
-          <argLine>-ea</argLine>
+          <argLine>-ea --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -424,18 +397,18 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>${junit.version}</version>
+        <version>4.12</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>net.sourceforge.collections</groupId>
         <artifactId>collections-generic</artifactId>
-        <version>${collections-generic.version}</version>
+        <version>4.01</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>${commons-lang.version}</version>
+        <version>3.7</version>
       </dependency>
       <dependency>
         <groupId>org.codehaus.jackson</groupId>
@@ -450,30 +423,47 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>${slf4j.version}</version>
+        <version>1.7.25</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>jcl-over-slf4j</artifactId>
-        <version>${slf4j.version}</version>
+        <version>1.7.25</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>jul-to-slf4j</artifactId>
-        <version>${slf4j.version}</version>
+        <version>1.7.25</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>log4j-over-slf4j</artifactId>
-        <version>${slf4j.version}</version>
+        <version>1.7.25</version>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
-        <version>${logback.version}</version>
+        <version>1.1.11</version>
         <optional>true</optional>
+      </dependency>
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.1</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-core</artifactId>
+        <version>2.3.0</version>
+        <scope>runtime</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>2.3.0</version>
+        <scope>runtime</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -502,6 +492,18 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
     </dependency>
   </dependencies>
 
@@ -579,10 +581,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>${maven-project-info-reports-plugin.version}</version>
+        <version>3.0.0</version>
         <configuration>
           <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
-          <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
         </configuration>
         <reportSets>
           <reportSet>
@@ -590,16 +591,12 @@
               <report>index</report>
               <report>summary</report>
               <report>modules</report>
-              <!--                             <report>cim</report> -->
               <report>dependencies</report>
-              <!--                             <report>dependency-convergence</report> -->
               <report>dependency-info</report>
               <report>dependency-management</report>
               <report>distribution-management</report>
               <report>issue-tracking</report>
               <report>license</report>
-              <!--                             <report>plugin-management</report> -->
-              <!--                             <report>plugins</report> -->
               <report>project-team</report>
               <report>mailing-list</report>
               <report>scm</report>
